--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Roboto";
+}
+
 .rules-description{
     display: none;
 }
