--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,10 +5,58 @@
     font-family: "Roboto";
 }
 
+body{
+    background-color: #eae2e2;
+    padding-bottom: 200px;
+}
+
+.container{
+    margin-top: 150px;
+}
+
+#title{
+    text-align: center;
+    padding-top: 1rem;
+    color: rgb(133, 75, 75);
+}
+
+#score,
+#cpu-score{
+    text-align: center;
+    margin-top: 5px;
+}
+
+.choices{
+    text-align: center;
+    margin-top: 10px;
+}
+
+.buttons{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.btns{
+    margin-right: 10px;
+    padding: 5px;
+}
+
+.footer{
+    text-align: center;
+    margin-top: 15px;
+}
+
+#restart-game,
+.rules{
+    margin-right: 10px;
+    padding: 5px;
+}
+
 .rules-description{
     display: none;
 }
 
 .show-rules {
     display: block;
+    margin-top: 10px;
 }
